# jsonvalidator

./: pipe_minimal.yml  pipeline_dag_run.yml  pyproject.toml  schema.manual.json
jsonvalidator/: validator.py
